--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongodb": "^6.10.0",
     "mongoose": "^8.7.3",
     "nodemon": "^3.1.7",
+    "stripe": "^17.4.0",
     "zod": "^3.23.8"
   }
 }
